<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/berry"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.selyakov.ft51_gym5.EmailPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="254dp"
            android:layout_height="371dp"
            android:clickable="false"
            app:srcCompat="@mipmap/ic_launcher"></ImageView>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/emailpassword_title_text"
            android:textSize="34dp" />
<!--            android:theme="@style/ThemeOverlay.MyTitleText" -->


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textSize="21dp" />
        <!--            style="@style/ThemeOverlay.MyTextDetail"-->

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:textSize="15dp"
            android:visibility="invisible"
            tools:text="Firebase User ID: " />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/auth"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/style_fields_auth"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="9dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />


            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="1sp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/style_fields_auth"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                style="@style/ThemeOverlay.MyDarkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="2.0">

            <Button
                android:id="@+id/signOutButton"
                style="@style/ThemeOverlay.MyDarkButton"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
